[gd_scene load_steps=3 format=3 uid="uid://dlpolu3uh2kka"]

[ext_resource type="Script" uid="uid://dlyjqgqfv0iea" path="res://scenes/ui/main_menu.gd" id="1_vjtqc"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0rmrm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -2.0
offset_right = 11.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjtqc")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"
icon = SubResource("ViewportTexture_0rmrm")

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
